tests/chapter_15/invalid_parse/return_array.c
/* could conceivably be type error in some implementations? */
int foo(void)[3];
int main(void)
{
    return foo()[2];
}